--- a/bloomi/pubspec.yaml
+++ b/bloomi/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   animate_do: ^3.0.2
+  responsive_framework: ^1.1.0
 
 dev_dependencies:
   flutter_test:
