implemented signup user part

--- a/bloomi_web/pubspec.yaml
+++ b/bloomi_web/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_core: ^2.15.1
   firebase_auth: ^4.9.0
   logger: ^2.0.2
+  awesome_dialog: ^3.1.0
 
 dev_dependencies:
   flutter_test:
