--- a/bloomi_web/pubspec.yaml
+++ b/bloomi_web/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_auth: ^4.9.0
   logger: ^2.0.2
   awesome_dialog: ^3.1.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
