--- a/bloomi_web/pubspec.yaml
+++ b/bloomi_web/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   awesome_dialog: ^3.1.0
   provider: ^6.0.5
   syncfusion_flutter_calendar: ^22.2.12
+  cloud_firestore: ^4.9.1
 
 dev_dependencies:
   flutter_test:
