--- a/bloomi_web/pubspec.yaml
+++ b/bloomi_web/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   provider: ^6.0.5
   syncfusion_flutter_calendar: ^22.2.12
   cloud_firestore: ^4.9.1
+  chat_bubbles: ^1.5.0
 
 dev_dependencies:
   flutter_test:
