--- a/bloomi_web/pubspec.yaml
+++ b/bloomi_web/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   google_sign_in: ^6.1.5
   shared_preferences: ^2.2.1
   json_annotation: ^4.8.1
+  dropdown_button2: ^2.3.9
 
 dev_dependencies:
   flutter_test:
