--- a/bloomi_web/pubspec.yaml
+++ b/bloomi_web/pubspec.yaml
@@ -50,6 +50,10 @@ dependencies:
   shared_preferences: ^2.2.1
   json_annotation: ^4.8.1
   dropdown_button2: ^2.3.9
+  xen_popup_card: ^0.0.1
+  date_field: ^3.0.5
+  intl: ^0.18.1
+  sidebarx: ^0.16.1
 
 dev_dependencies:
   flutter_test:
