--- a/bloomi_web/pubspec.yaml
+++ b/bloomi_web/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   shared_preferences: ^2.2.1
   json_annotation: ^4.8.1
   dropdown_button2: ^2.3.9
+  firebase_storage: ^11.2.6
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
