--- a/bloomi_web/pubspec.yaml
+++ b/bloomi_web/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   sidebarx: ^0.16.1
   fl_chart: ^0.63.0
   firebase_dynamic_links: ^5.3.6
+  timeago: ^3.5.0
 
 
 dev_dependencies:
