--- a/bloomi_web/pubspec.yaml
+++ b/bloomi_web/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   fl_chart: ^0.63.0
   firebase_dynamic_links: ^5.3.6
   timeago: ^3.5.0
+  visibility_detector: ^0.4.0+2
 
 
 dev_dependencies:
