--- a/bloomi_web/pubspec.yaml
+++ b/bloomi_web/pubspec.yaml
@@ -58,9 +58,6 @@ dependencies:
   visibility_detector: ^0.4.0+2
   syncfusion_flutter_calendar: ^23.1.36
   firebase_core: ^2.16.0
-  
- 
-
 
 dev_dependencies:
   flutter_test:
@@ -101,15 +98,19 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
+  fonts:
+    - family: BodoniModa
+      fonts:
+        - asset: fonts/xx.ttf
+    #       - asset: fonts/Schyler-Italic.ttf
+    #         style: italic
+    - family: Skranji
+      fonts:
+        - asset: fonts/Skranji_Regular.ttf
+
+    - family: Julee
+      fonts:
+        - asset: fonts/Julee.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
