--- a/bloomi_web/pubspec.yaml
+++ b/bloomi_web/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   visibility_detector: ^0.4.0+2
   syncfusion_flutter_calendar: ^23.1.36
   firebase_core: ^2.16.0
+  cr_calendar: ^1.2.1
   
 
 dev_dependencies:
