--- a/bloomi_web/pubspec.yaml
+++ b/bloomi_web/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   firebase_core: ^2.16.0
   cr_calendar: ^1.2.1
   animated_text_kit: ^4.2.2
+  table_calendar: ^3.0.9
   
 
 dev_dependencies:
