--- a/bloomi_web/pubspec.yaml
+++ b/bloomi_web/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   cr_calendar: ^1.2.1
   animated_text_kit: ^4.2.2
   table_calendar: ^3.0.9
+  http: ^1.1.0
   
 
 dev_dependencies:
