--- a/bloomi_web/pubspec.yaml
+++ b/bloomi_web/pubspec.yaml
@@ -62,6 +62,9 @@ dependencies:
   animated_text_kit: ^4.2.2
   table_calendar: ^3.0.9
   http: ^1.1.0
+  googleapis: ^11.4.0
+  googleapis_auth: ^1.4.1
+
   
 
 dev_dependencies:
