--- a/bloomi_web/pubspec.yaml
+++ b/bloomi_web/pubspec.yaml
@@ -64,8 +64,7 @@ dependencies:
   http: ^1.1.0
   googleapis: ^11.4.0
   googleapis_auth: ^1.4.1
-
-  
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
